--- a/.github/workflows/dojo-infra.yml
+++ b/.github/workflows/dojo-infra.yml
@@ -3,7 +3,7 @@ name: Test for infrastructure to DOJO MANAGEMENT
 on:
   pull_request:
     branches:
-      - develop
+      - main
     paths:
         - 'dojo-infra/*'
 #on:
