--- a/.github/workflows/dojo-infra.yml
+++ b/.github/workflows/dojo-infra.yml
@@ -6,6 +6,10 @@ on:
       - main
     paths:
         - "dojo-infra/**"
+
+defaults:
+  run:
+    working-directory: tf_1
 #on:
 #  push:
 #    branches:
