--- a/.github/workflows/dojo-infra.yml
+++ b/.github/workflows/dojo-infra.yml
@@ -10,14 +10,9 @@ on:
 defaults:
   run:
     working-directory: dojo-infra
-#on:
-#  push:
-#    branches:
-#      - main
 
 env:
-  env: test
-  
+  TF_VAR_env: "test"
 
 jobs:
   terraform:
